package io.javaside.ts4e.core;

public record ParserDescriptor(String language, String library, String injectionQuery) {

}
