package io.javaside.ts4e.core.classification;

public record ClassificationSpan(int offset, int length, ClassificationType classificationType) {

}
